--- a/style.css
+++ b/style.css
@@ -145,10 +145,16 @@ header button {
 }
 
 .product img {
-  width: 100%;
+  /* width: 100%;
   height: 150px;
   cursor: pointer;
-  padding-top: 10px;
+  padding-top: 10px; */
+  object-fit: cover;
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: 135px;
+  cursor: pointer;
 }
 
 .modal {
@@ -271,7 +277,10 @@ input[type=range]::-moz-range-thumb {
   border-radius: 10px/100%;
   cursor: pointer;
 }
-
+#cart-total {
+  display: inline;
+  color:#ff5722;
+}
 /*  */
 
 #order-form input,
