--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
 }
 
 header {
-  height: 430px;
+  /* height: 430px; */
+  height: 300px;
   background: #333;
   color: #333;
   padding: 10px;
@@ -15,6 +16,8 @@ header {
   flex-direction: column;
   gap: 20px;
   align-items: center;
+  position: sticky;
+  top: 0;
 }
 
 .header_zag {
@@ -337,6 +340,7 @@ footer {
 
   header {
     height: 330px;
+    position: relative;
   }
 
   .filters_search_sort {
